--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Interiors</title>
+    <title>Uzi_Home_Interiors</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -54,8 +54,8 @@
 
     <section id="contact">
         <h2>Contact Us</h2>
-        <p>Email: info@homeinteriors.com</p>
-        <p>Phone: +123 456 7890</p>
+        <p>Email: mmohd7033@gmail.com</p>
+        <p>Phone: +91-9711218128</p>
     </section>
 
     <script src="js/script.js"></script>
