--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <header>
-        <h1>Home Interiors</h1>
+        <h1>Uzi Home Interiors</h1>
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
