--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </header>
 
     <section id="home">
-        <img src="images/hero.jpg" alt="Beautiful Interior Design">
+        <img src="IMG_1095.jpeg" alt="Beautiful Interiors Design">
         <h2>Transform Your Living Space</h2>
         <p>We create stunning and functional interiors for your dream home.</p>
   <!-- Button to Open the Form -->
