--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <section id="services">
         <h2>Our Services</h2>
         <div class="service">
-            <img src="images/service1.jpg" alt="Modern Interior Design">
+           <img src="IMG_1096.jpeg" width="300" height="200" alt="Image description"> 
             <p>Modern Interior Design</p>
         </div>
         <div class="service">
@@ -57,7 +57,7 @@
             <p>Furniture & Decor</p>
         </div>
         <div class="service">
-            <img src="images/service3.jpg" alt="Lighting & Space Planning">
+            <img src="MG_1096.jpeg" alt="Lighting & Space Planning">
             <p>Lighting & Space Planning</p>
         </div>
     </section>
