--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <p>Modern Interior Design</p>
         </div>
         <div class="service">
-            <img src="images/service2.jpg" alt="Furniture & Decor">
+            <img src="IMG_1097.jpeg" alt="Furniture & Decor">
             <p>Furniture & Decor</p>
         </div>
         <div class="service">
