--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
             <p>Modern Interior Design</p>
         </div>
         <div class="service">
-            <img src="IMG_1096.jpeg" alt="Furniture & Decor">
+           <img src="IMG_1096.jpeg" width="300" height="200" alt="Furniture & Decor">
             <p>Furniture & Decor</p>
         </div>
         <div class="service">
-            <img src="MG_1096.jpeg" alt="Lighting & Space Planning">
+           <img src="IMG_1096.jpeg" width="300" height="200" alt="Lighting & Space Planning">
             <p>Lighting & Space Planning</p>
         </div>
     </section>
