--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <section id="gallery">
         <h2>Our Work</h2>
         <div class="gallery-container">
-            <img src="IMGAGE.jpg" width="300" height="200" alt="Luxury Living Room">
+            <img src="IMAGE.jpg" width="300" height="200" alt="Luxury Living Room">
             <img src="images/gallery2.jpg" alt="Elegant Bedroom">
             <img src="images/gallery3.jpg" alt="Modern Kitchen">
         </div>
